# t5-commons

./: .gitignore  README.md  perlmutter_t5user_deploy.sh
.github/workflows/: common-tests.yml  jamo-deploy.yml  project_action.yaml
BRAVE/: docker-compose.prod.yml  docker-compose.yml
BRAVE/.ipynb_checkpoints/: brave_rest_api-checkpoint.ipynb
BRAVE/backend/: requirements.txt
BRAVE/backend/api/: settings.py
BRAVE/backend/core/: urls.py  views.py
BRAVE/frontend/: .dockerignore  Dockerfile  Dockerfile.prod  package-lock.json  package.json
BRAVE/frontend/public/: index.html
BRAVE/frontend/src/: App.css  App.js  Species.js  Target.js  index.js  myplugin.js  util.js
BRAVE/nginx/: nginx.conf
alphafold/: README.md  pyproject.toml
alphafold/scripts/: publish-af-results.sh  setup_env.sh  submit-af-job.sh
alphafold/t5_af/: submit_job.py
alphafold/t5af/: publish_results.py  submit_job.py  utils.py
bilbomd/: README.md  bilbomd_release.py
common/: README.md  pyproject.toml
common/t5common/: cli.py  utils.py
common/t5common/jamo/: __init__.py  connector.py  jat.py  metadata.py
common/t5common/jira/: __init__.py  assets.py  check_jira.py  check_jobs.py  check_workflow.py  cli.py  connector.py  database.py  mark_job.py  publish_results.py  start_workflow.py  utils.py
common/t5common/jira/schema/: config.json  wf_info.json
common/t5common/job/: __init__.py  job.py  perlmutter.py
common/tests/: test_workflow.py
csbid_cron_script/: .gitignore  CSBID.py  Dockerfile  README.md  jira_import_util.py  mailin_SAXS.py  main.py  requirements.txt  simple_scattering.py  start.sh
csbid_jira_cron_script/: CSBID.py  Dockerfile
data_management/: README.md
data_management/config/: analysis.config  lapinpy.config  metadata.config  outputs.tags.yaml  tags.yaml  tape.config
data_management/dt_service/: environment.yml  run_dt_service_nersc_prod.sh  scrontab.perlmutter.sh  workflow_test.sh
data_management/jamo/: Makefile  init_and_run.sh
dm/dt_service/: run_dt_service_perlmutter_prod.sh  scrontab.test.sh
dm/jamo/: Dockerfile  clean.sh  get_orig_code.sh
dm/jamo/sdm-common/: setup.py
genome_browser/: .env.dev  docker-compose.yml
genome_browser/frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
genome_browser/nginx/: Dockerfile  nginx.conf
jamo/: README.md
jamo/config/: analysis.config  outputs.tags.yaml  tags.yaml
jamo/docker/: Dockerfile  get_code.sh
jamo/dt_service/: check_dt_service_perlmutter_prod.sh  crontab.dtn.sh
jira_automation/: config.yaml  environment.yml
jira_automation/scripts/: scrontab.perlmutter.t5_jwf_check.sh  scrontab.perlmutter.t5_jwf_publish.sh  scrontab.perlmutter.t5_jwf_start.sh  t5_jwf.sh
(+369 files in other folders)
