[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "t5af"
version = "0.1.0"
description = "A library for common routines needed for Taskforce5 code"
readme = "README.md"  # Path to your README file
requires-python = ">=3.7"
license = { text = "Modified BSD" }  # Specify your license here
authors = [
    { name = "Andrew Tritt", email = "ajtritt@lbl.gov" }
]
keywords = ["t5", "common", "library"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests"
]

[project.scripts]
submit-af-job = "t5af.submit_job:main"
publish-af-results = "t5af.publish_results:main"
